# pdf-canvas

./: .env-example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
api-gateway/: Dockerfile  pyproject.toml
api-gateway/src/: main.py  middlewares.py  routers.py
api-gateway/src/alembic/versions/: 2025_12_07_1535-4b8d1cd60fe4_add_refresh_session_model.py
api-gateway/src/auth/: __init__.py  repository.py  schemas.py  send_email.py  service.py  token.py  user_repository.py  utils.py  views.py
api-gateway/src/core/: broker.py  config.py  db.py  dependencies.py  exceptions.py  logger.py  redis.py  utils.py
api-gateway/src/core/models/: base.py  tasks.py  users.py
api-gateway/src/tasks/: repository.py  service.py  views.py
llm-worker/: Dockerfile  pyproject.toml
llm-worker/src/: broker.py  config.py  llm.py  main.py
llm-worker/src/prompts/: default.txt
pdf-worker/: Dockerfile  pyproject.toml
pdf-worker/src/: broker.py  config.py  convert.py  main.py
pdf-worker/src/s3/: s3.py  utils.py
pdf-worker/static/css/: default.css
shared/: pyproject.toml
shared/shared/: __init__.py  async_rmq.py  broker_messages.py  config.py  exceptions.py  redis.py  rmq_topology.py
shared/shared/db/: unit_of_work.py
src/: main.py  routers.py
src/broker/: broker.py  consumer.py  publisher.py
src/core/: config.py  db.py
src/tasks/: schemas.py  service.py  views.py
task-api/: Dockerfile  pyproject.toml
task-api/src/: main.py
task-api/src/alembic/: env.py
task-api/src/alembic/versions/: 2025_12_06_2051-f1f7b83e4546_init_migration.py  2026_01_13_1724-90a16b464da9_add_status_to_task_model.py
task-api/src/auth/: repository.py  schemas.py  send_email.py  service.py  token.py  user_repository.py  utils.py  views.py
task-api/src/core/: broker.py  config.py  exceptions.py
task-api/src/core/models/: __init__.py  mixins.py  refresh_session.py  tasks.py
task-api/src/rmq/: worker.py
task-api/src/tasks/: repository.py  schemas.py  service.py  views.py
