[tool.poetry]
name = "textcanvas"
version = "0.1.0"
description = ""
authors = ["Амир Абдрафиков <sequze@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.122.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
uvicorn = {extras = ["standart"], version = "^0.38.0"}
black = "^25.11.0"
pika = "^1.3.2"
uuid7 = "^0.1.0"
asyncpg = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
