[tool.poetry]
name = "llm-worker"
version = "0.1.0"
description = ""
authors = ["Амир Абдрафиков <sequze@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^2.8.1"
pydantic-settings = "^2.12.0"
shared = { path = "../shared", develop = true}
aio-pika = "^9.5.8"
pika = "^1.3.2"
redis = "^7.1.0"
uuid7 = "^0.1.0"
aiofiles = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
