[tool.poetry]
name = "pdf-worker"
version = "0.1.0"
description = ""
authors = ["Амир Абдрафиков <sequze@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
markdown = "^3.10"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
pygments = "^2.19.2"
playwright = "^1.57.0"
shared = { path = "../shared", develop = true}
aiofiles = "^25.1.0"
aio-pika = "^9.5.8"
redis = "^7.1.0"
aiobotocore = "^3.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
