[tool.poetry]
name = "shared"
version = "0.1.0"
description = ""
authors = ["Амир Абдрафиков <sequze@mail.ru>"]
readme = "README.md"
packages = [
    { include = "shared" }
]

[tool.poetry.dependencies]
python = "^3.13"
pika = "^1.3.2"
pydantic = "^2.12.5"
redis = "^7.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
